--- a/css/slides.css
+++ b/css/slides.css
@@ -518,6 +518,35 @@ p.small {
 /*
   custom css not framework related
 */
+.absolute {
+  position: absolute;
+
+}
+#docs .absolute {
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 364px;
+  padding-top: 35px;
+}
+#letters .absolute {
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 364px;
+  padding-top: 90px;
+}
+.popup .center-m-down {
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  margin-bottom: 0;
+}
+.popup .dialogContent {
+  padding: 20px;
+}
+
 #ispect-projects h1 {
 	margin-top: 60px;
 }
@@ -2094,24 +2123,22 @@ p.micro, .p.micro {
 .fix-5-12 {
 	max-width: 464px !important;
 }
-
+.fix-4-12 {
+  max-width: 364px !important;
+}
 .pad.shadow {
 	box-shadow: 0 35px 54px rgba(0, 0, 0, 0.3), 0 5px 20px rgba(0, 0, 0, 0.07), 0 0px 1px rgba(0, 0, 0, 0.12);
 }
-
 .pad {
 	border-radius: 8px;
-	color: #303030;
 	background: #fff;
 	overflow: hidden;
 }
-
 .pad-header {
 	background-color: #F6F9FC;
 	width: 100%;
 	padding: 15px 0px 15px 0px;
 }
-
 .container-md {
 	height: 460px !important;
 }
