Enterprise slide had no ID so the slider declarations didn't work

--- a/css/slides.css
+++ b/css/slides.css
@@ -744,11 +744,11 @@ p.small {
 	transform: rotate(45deg);
 }
 
-#entreprenad .sliderBox-83 {
+#enterprise .sliderBox-83 {
 	margin-top: 20%;
 }
 
-#entreprenad .sliderBox-83 .img-fade {
+#enterprise .sliderBox-83 .img-fade {
 	max-height: 275px;
 }
 
