--- a/css/slides.css
+++ b/css/slides.css
@@ -1411,15 +1411,16 @@ section.network .logos .row>div:nth-child(odd) {
 		margin-top: -228px;
 		margin-bottom: -228px;
 	}
-img.macbook-61 {
-    margin: -10% -100% -10% -135% !important;
+  img.macbook-61 {
+      margin: -10% -100% -10% -135% !important;
+      width: 225%;
+      max-width: none;
+  }
+  img.macbook-62 {
+  	margin: 0% -100% -10% 10% !important;
+  	max-width: none;
     width: 225%;
-    max-width: none;
-}
-	img.macbook-62 {
-		margin: 0% -100% -10% 10% !important;
-		max-width: none;
-	}
+  }
 }
 
 
